# gitlab-issues-export

./: GUIDE.md  Makefile  README.md  apenas_bugs_summary.md  app.py  completo.csv  completo.json  completo.md  completo_summary.md  create_reports.py  dashboard.py  extract_gitlab_issues.py  filtros_locais_summary.md  gitlab_api_extractor.py  gitlab_extractor_unified.py  gitlab_issues_20250930_174541.md  gitlab_issues_20250930_175252.csv  gitlab_issues_summary_20250930_175122.md  gitlab_issues_summary_20250930_175252.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.bat  run_dashboard.sh  start_dashboard.bat  start_dashboard.sh  streamlit_dashboard.py  teste_rapido.md  teste_unificado_summary.md
.streamlit/: config.toml
reports/json/: gitlab-issues-2025-10-02.json
